<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_robot_driver</name>
  <version>0.0.3</version>
  <description>The new driver for Universal Robots UR3, UR5 and UR10 robots with CB3 controllers and the e-series.</description>
  <!--author>Thomas Timm Andersen</author-->
  <!--author>Simon Rasmussen</author-->
  <!--author>Felix Exner</author-->
  <!--author>Lea Steffen</author-->
  <!--author>Tristan Schnell</author-->
  <maintainer email="exner@fzi.de">Felix Exner</maintainer>
  <license>Apache-2.0</license>
  <license>BSD-2-Clause</license>
  <license>Zlib</license>

  <url type="website">http://wiki.ros.org/ur_robot_driver</url>
  <url type="bugtracker">https://github.com/UniversalRobots/Universal_Robots_ROS_Driver/issues</url>
  <url type="repository">https://github.com/UniversalRobots/Universal_Robots_ROS_Driver</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>boost</build_depend>
  <!--build_depend>industrial_robot_status_interface</build_depend-->

  <!--depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>controller_manager</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>ur_controllers</depend>
  <depend>ur_dashboard_msgs</depend>
  <depend>ur_client_library</depend>
  <depend>ur_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>controller_stopper</exec_depend>
  <exec_depend>force_torque_sensor_controller</exec_depend>
  <exec_depend>industrial_robot_status_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>socat</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_e_description</exec_depend>
  <exec_depend>velocity_controllers</exec_depend-->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/hardware_interface_plugin.xml" />
    <!--rosdoc config="doc/rosdoc.yaml" /-->
  </export>

</package>
